[metadata]
name = strings-fuzz
version = 0.0.1
author = Tiger Yotsawat
author_email = tigeryotsawat@gmail.com
description = A flexible fuzzy name matcher, with multi-language support, that finds best matches between two sets using the edit distance method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tigeryst/strings-fuzz
project_urls =
    Bug Tracker = https://github.com/tigeryst/strings-fuzz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = fuzzy, Levenshtein, matcher

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    fuzzywuzzy~=0.18.0
    num2words~=0.5.10
    python-Levenshtein~=0.12.2
    pythainlp~=3.0.5
    pandas~=1.4.2
    numpy~=1.22.3
include_package_data=True

[options.package_data]
strings_fuzz = data/*.csv

[options.extras_require]
test = 
    pytest>=7.1.2

[options.packages.find]
where = src